2005-03-04  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/gtkmm-tut.xml: Fixed a duplication section id.
	* docs/tutorial/Makefile: Make the phpwebnotes version build in a 
	separate directory, to make things simpler.

2005-03-03  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/scale.hg: format_value signal: Modify the custom conversion 
	so that this never sends an empty string to GTK+, so we do not stop 
	C callbacks from using the special meaning that format_value gives to 
	a null string. This needs an extra signal parameter in C++ in future -
	see the comment. Bug #154004 from Lars Luthman, who did the 
	detective work.

2005-03-03 <meissner@suse.de>

	* gtk/src/treeview.ccg: insert_column(): Used (void*)0 instead of 0 
	for the terminating vararg, to avoid g++ 4.0 warning about  missing 
	sentinel in function call.

2005-03-03  Albert Chin <thewrittenword.com>

	* configure.in: Check whether funlockfile(), flockfile(), and 
	getc_unlocked() are really available to the compiler, rather than 
	just present in a library.
	* demos/gtk-demo/demo-window.c: Use the new tests.

2005-02-28   Roel Vanhout  <roel.vanhout@gmail.com>

	* docs/tutorial/gtkmm-tut.xml: Add more section ids so that 
	phpwebnotes would have permanent ids to use.

2.5.7:

2005-02-23  Roel Vanhout  <roel.vanhout@gmail.com>

	* docs/tutorial/: Experimental generation of the html with 
	phpWebNotes code, to allow online comments. Not used yet.

2005-02-18  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_signals.defs: Removed some more quotes from inside 
	the properties docs strings, because gmmproc can not handle those yet.

2005-02-18  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/cellrenderer.hg: start_editing(): Add a default value of 0 
	for the last flags parameter, because this is a valid value.
	* examples/book/treeview/editable_cells: Added a number_validated 
	column, which shows how to handle edited cells without the 