@@ -1,5 +1,10 @@
 2005-03-04  Murray Cumming  <murrayc@murrayc.com>
 
+	* examples/book/menus_and_toolbars/main_menu/examplewindow.[h|cc]: 
+	Demonstrate radio action items.
+
+2005-03-04  Murray Cumming  <murrayc@murrayc.com>
+
 	* docs/tutorial/gtkmm-tut.xml: Fixed a duplication section id.
 	* docs/tutorial/Makefile: Make the phpwebnotes version build in a 
 	separate directory, to make things simpler.
